--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     </style>
 </head>
 <body>
-    <h1>Classic Replica Studio</h1>
-    <h3>Founded in 2025 by Win & Nueng</h3>
+    <h1>Classic Studio</h1>
+    <h2>Founded in 2025 by Win & Nueng</h3>
     <div class="gallery" id="gallery"></div>
     <div class="lightbox" id="lightbox" onclick="closeLightbox()">
         <img id="lightbox-img" src="" alt="">
