--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         
                         let priceElement = document.createElement("div");
                         priceElement.classList.add("price");
-                        priceElement.textContent = `฿${item.price}`;
+                        priceElement.textContent = `EUR ${item.price}`;
                         
                         container.appendChild(imgElement);
                         container.appendChild(priceElement);
