--- a/index.html
+++ b/index.html
@@ -121,5 +121,6 @@
             document.getElementById("lightbox").classList.remove("show");
         }
     </script>
+    <h5>All the picture have been retrieved from the internet.</h4>
 </body>
 </html>
