--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
             document.getElementById("lightbox").classList.remove("show");
         }
     </script>
-    <h5>All the picture have been retrieved from the internet.</h4>
+    <h5>All the images have been retrieved from the internet. High appreciation for the image sources and for our artists in the loving memories.</h5>
+    <h5>This material is for educational and recreational purposes only</h5>
 </body>
 </html>
