--- a/index.html
+++ b/index.html
@@ -122,6 +122,6 @@
         }
     </script>
     <h5>All the images have been retrieved from the internet. High appreciation for the image sources and for our artists in the loving memories.</h5>
-    <h5>This material is for educational and recreational purposes only</h5>
+    <h5>This material is for educational and recreational purposes only.</h5>
 </body>
 </html>
